@@ -158,6 +158,15 @@ main(int argc, char **argv, char** env)
 
   app = [NSApplication sharedApplication];
 
+  {
+    NSMenu	*menu = [NSMenu new];
+
+    [menu addItemWithTitle: @"Quit"
+		    action: @selector(terminate:)
+	     keyEquivalent: @"q"];
+    [NSApp setMainMenu: menu];
+  }
+
   [app setDelegate: [myController new]];  
   [app run];
 
