@@ -22,7 +22,7 @@
    
    You should have received a copy of the GNU Library General Public
    License along with this library; if not, write to the Free
-   Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+   Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02111, USA.
 */
 
 #import <Foundation/NSAutoreleasePool.h>
@@ -162,6 +162,15 @@ for rent."]];
 	[window setFrame:winRect display:YES];
 	[window orderFront:nil];
 	
+  {
+    NSMenu	*menu = [NSMenu new];
+
+    [menu addItemWithTitle: @"Quit"
+		    action: @selector(terminate:)
+	     keyEquivalent: @"q"];
+    [NSApp setMainMenu: menu];
+  }
+
 	[theApp run];
 	[pool release];
 
